--- a/VoiceSwnikTextBot/VoiceSwnikTextBot.csproj
+++ b/VoiceSwnikTextBot/VoiceSwnikTextBot.csproj
@@ -12,6 +12,7 @@
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="9.0.0" />
     <PackageReference Include="Telegram.Bot" Version="22.3.0" />
     <PackageReference Include="Telegram.Bots.Extensions.Polling" Version="5.9.0" />
+    <PackageReference Include="Vosk" Version="0.3.38" />
   </ItemGroup>
 
 </Project>
